增加客户微服务,补全范型内容